# sidereon-ex

./: .credo.exs  .formatter.exs  .git-blame-ignore-revs  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  checksum-Elixir.Sidereon.NIF.exs  mix.exs  sidereon.livemd
.claude/: CLAUDE.md
examples/: conjunction_alert.livemd  gnss_positioning.livemd  iss_tracker.livemd
guides/: accuracy.md  batch_analysis.md  collision_probability.md  conjunction_screening.md  data_acquisition.md  gnss_constellation_catalog.md  pass_prediction.md  track_iss.md
lib/: sidereon.ex
native/sidereon_nif/: Cargo.toml  README.md
native/sidereon_nif/.cargo/: config.toml.example
native/sidereon_nif/src/: angles.rs  antex.rs  astro_observe_almanac.rs  astro_phase_b.rs  atmosphere.rs  bias.rs  bodies.rs  broadcast.rs  broadcast_comparison.rs  carrier_phase.rs  cdm.rs  collision.rs  conjunction.rs  constellation.rs  consts.rs  covariance.rs  coverage.rs  data.rs  dgnss.rs  doppler.rs  drag.rs  eclipse.rs  elements.rs  ephemeris.rs  errors.rs  forces.rs  frequencies.rs  gauss.rs  geoid.rs  geometry.rs  ils.rs  iod.rs  iono.rs  lambert.rs  lib.rs  lnav.rs  look_angle.rs  normality.rs  observables.rs  observation.rs  (+30 more)
test/: angles_test.exs  atmosphere_test.exs  bodies_test.exs  ccsds_cdm_full_fields_test.exs  ccsds_cdm_test.exs  ccsds_oem_test.exs  ccsds_opm_test.exs  celestrak_test.exs  collision_test.exs  conjunction_test.exs  constants_test.exs  constellation_test.exs  coordinates_test.exs  covariance_least_squares_test.exs  covariance_test.exs  coverage_test.exs  (+90 more)
(+225 files in other folders)
